rtg_tests/negative/main_signature/go.mod
module example.com/rtgtests/negative/main_signature

go 1.25
